<resources>
    <string name="app_name">U·Share</string>

    <string name="back_again_exit">再按一次退出U·Share</string>
    <string name="unknown">未填</string>
    <string name="net_error">网络异常，请检查网络</string>
    <string name="socket_timeout_error">连接超时，请检查网络</string>
    <string name="connect_error">连接出错，请检查网络</string>
    <string name="unkown_host_error">DNS解析错误，请检查网络</string>
    <string name="server_err">服务器异常，请稍后重试</string>

    <!--Login-->
    <string name="login_title">登录</string>
    <string name="login_mobile_prefix">+86</string>
    <string name="login_mobile_hint">请输入手机号</string>
    <string name="login_mobile_err">请输入正确的手机号</string>
    <string name="login_captcha_hint">短信验证码</string>
    <string name="login_captcha_get">获取验证码</string>
    <string name="login_captcha_timer">重新获取%1$ds</string>
    <string name="login_captcha_err">请输入正确的验证码</string>
    <string name="login_captcha_get_success">发送成功</string>
    <string name="login_captcha_get_err">获取验证码失败，请重试</string>
    <string name="login_submit">登录</string>
    <string name="login_submit_err">登录失败，请重试</string>
    <string name="login_unvalid_msg_code">请输入正确的短信验证码</string>
    <string name="login_insert_fail">会员信息保存失败，请重试</string>
    <string name="login_send_msg_overdue">今日短信发送次数超限</string>
    <string name="login_send_msg_error">发送短信失败，请稍后重试</string>
    <string name="login_mobile_format_error">手机号码格式不正确</string>
    <string name="login_captcha_notify_title">验证码提醒</string>
    <string name="login_channel_name">验证码提醒</string>
    <string name="login_captcha_notify_text">[范例大全]验证码:%1$s，请及时验证，切勿泄露给他人。</string>

    <!--No network-->
    <string name="no_net_text">网络不给力</string>
    <string name="no_net_retry">再试一次</string>

    <!--Tabs-->
    <string name="tab_lot">抽签</string>
    <string name="tab_topic">主题</string>
    <string name="tab_mine">我的</string>

    <!--Lot-->
    <string name="lot_nick">昵称：</string>
    <string name="lot_mobile">手机号：</string>
    <string name="lot_weight">抽签权重：</string>
    <string name="lot_weight_err">更新权重失败</string>
    <string name="lot_weight_success">更新权重成功</string>

    <!--Topic-->
    <string name="topic_user_id">用户编号：</string>
    <string name="topic_title">标题：</string>
    <string name="topic_desc">描述：</string>

    <!--Mine-->
    <string name="mine_nick">昵称：</string>
    <string name="mine_mobile">手机号：</string>
    <string name="mine_weight">抽签权重：</string>
    <string name="mine_submit">更新</string>
    <string name="mine_nick_success">更新昵称成功</string>
    <string name="mine_nick_err">更新昵称失败</string>
    <string name="mine_user_success">获取个人信息成功</string>
    <string name="mine_user_err">获取个人信息失败</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>