<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.tustar.ushare.ui.login.LoginViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color"
        tools:context=".ui.login.LoginActivity">

        <include
            android:id="@+id/action_bar"
            layout="@layout/action_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/login_mobile_layout"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_layout_height"
            android:layout_marginEnd="@dimen/input_margin"
            android:layout_marginStart="@dimen/input_margin"
            android:layout_marginTop="126dp"
            android:background="@drawable/input_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_bar">

            <TextView
                android:layout_width="@dimen/login_mobile_prefix_width"
                android:layout_height="@dimen/login_mobile_prefix_height"
                android:gravity="center_vertical|left"
                android:text="@string/login_mobile_prefix"
                android:textColor="@color/input_text_color"
                android:textSize="@dimen/login_label_text_size" />

            <View
                android:layout_width="@dimen/divider_width"
                android:layout_height="@dimen/login_mobile_prefix_height"
                android:background="@color/bottom_divider_color" />

            <EditText
                android:id="@+id/login_mobile_editText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/login_mobile_text_margin"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical|left"
                android:hint="@string/login_mobile_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:onTextChanged="@{vm::onMobileTextChanged}"
                android:text="@={vm.mobile}"
                android:textColor="@color/input_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/input_text_size" />

            <ImageButton
                android:id="@+id/login_mobile_clear"
                android:layout_width="@dimen/clear_image_width"
                android:layout_height="@dimen/clear_image_height"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="0dp"
                android:background="@null"
                android:onClick="@{vm::clearMobileText}"
                android:src="@drawable/ic_clear"
                android:visibility="@{vm.mobileClear, default=invisible}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_captcha_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_layout_height"
            android:layout_marginEnd="@dimen/input_margin"
            android:layout_marginStart="@dimen/input_margin"
            android:background="@drawable/input_bg"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/login_mobile_layout"
            app:layout_constraintStart_toStartOf="@id/login_mobile_layout"
            app:layout_constraintTop_toBottomOf="@id/login_mobile_layout">

            <EditText
                android:id="@+id/login_captcha_editText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical|left"
                android:hint="@string/login_captcha_hint"
                android:inputType="number"
                android:maxLength="6"
                android:text="@={vm.captcha}"
                android:textColor="@color/input_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/input_text_size" />

            <TextView
                android:id="@+id/login_captcha_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="0dp"
                android:enabled="@{vm.captchaGetEnable}"
                android:onClickListener="@{vm.onClickSendListener}"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:text="@{vm.captchaGetText ?? @string/login_captcha_get}"
                android:textColor="@color/selector_code_btn_text_color"
                android:textSize="@dimen/login_label_text_size" />
        </LinearLayout>

        <Button
            android:id="@+id/login_submit"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/login_btn_margin_top"
            android:text="@string/login_submit"
            app:layout_constraintEnd_toEndOf="@+id/login_captcha_layout"
            app:layout_constraintStart_toStartOf="@+id/login_captcha_layout"
            app:layout_constraintTop_toBottomOf="@id/login_captcha_layout" />
    </android.support.constraint.ConstraintLayout>

</layout>
